fix(tables) set top vertical alignment in tables with 2-lines headers

--- a/src/sass/_instance_detail_snapshots.scss
+++ b/src/sass/_instance_detail_snapshots.scss
@@ -48,7 +48,7 @@
     th,
     td {
       display: table-cell;
-      vertical-align: middle;
+      vertical-align: top;
     }
 
     th:last-child {
